<resources>
    <string name="app_name">蜂域\n商家版</string>

    <string name="xunfei_app_id">559a3684</string>

    <string name="loading_data">正在加载数据</string>
    <string name="loading_no">0</string>

    <string name="kf_phone_num">0371-55896188</string>

    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="no_list_data">未查询到任何数据\n下拉刷新数据</string>
    <string name="yesterday">昨日</string>
    <string name="total">累计</string>
    <string name="revenue">营收</string>
    <string name="rang_e">让单返佣</string>
    <string name="qiang_e">抢单佣金</string>
    <string name="tixian">提现</string>
    <string name="net_income">净收入</string>
    <string name="balance_now">当前余额</string>

    <string name="register1">验证手机</string>
    <string name="register2">设置密码</string>
    <string name="register3">商户信息</string>
    <string name="register4">资质认证</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="get_code">获取\n验证码</string>
    <string name="next">下一步</string>
    <string name="forget_pass">忘记密码?</string>

    <string name="goods_all">全部商品</string>
    <string name="goods_add">添加商品</string>
    <string name="goods_my">本店商品</string>
    <string name="goods_all_notif">请认真选择本店有的产品打勾（本店没有的商品切勿选择，随意打勾上货将影响财务结算）</string>
    <string name="goods_my_notif">如本店产品售空，请及时在以下商品内打勾选择缺货</string>
    <string name="goods_make">确认有货</string>
    <string name="goods_down">确认缺货</string>

    <string name="order_qiang">可抢订单</string>
    <string name="order_dai">待发货</string>
    <string name="order_dai_shou">配送中</string>
    <string name="order_ok">交易完成</string>
    <string name="order_re">拒收</string>
    <string name="order_rang">让单</string>
    <string name="detail">详情</string>
    <string name="fahuo">发货</string>
    <string name="send_mark_sure">确认送达</string>
    <string name="input_kucun">请输入库存数</string>

    <string name="submit">提交</string>
    <string name="date">日期</string>
    <string name="new_add">新增(人)</string>
    <string name="huoyuelv">活跃率(%)</string>
    <string name="totle">累计(人)</string>
    <string name="input_tixian_pass">请输入提现密码</string>
    <string name="input_pass_defrentt">两次输入密码不一致</string>
    <string name="input_shouhuo_code">请输入收货码</string>
    <string name="kakawuyou_shop">店铺</string>
    <string name="good_manager">商品管理</string>
    <string name="huowu_manager">货品管理</string>
    <string name="send_manager">配送管理</string>
    <string name="shanghu_info">商户信息</string>
    <string name="zengzhi_service">增值服务</string>
    <string name="gold_vip">金牌会员</string>
    <string name="zengzhi_service2">增值服务2</string>
    <string name="zhanghu">账户</string>
    <string name="set">设置</string>
    <string name="logout">退出</string>
    <string name="about_us">关于我们</string>
    <string name="contract_us">联系我们</string>
    <string name="feet">意见反馈</string>
    <string name="xieyi">用户协议</string>
    <string name="version_check">版本检测</string>
    <string name="clear_data">清除缓存</string>
    <string name="input_yijian">请输入您宝贵的建议</string>
    <string name="input_tixian_jine">请输入提现金额</string>

    <string name="update_login_pass">修改登陆密码</string>
    <string name="update_tixian_pass">修改提现密码</string>
    <string name="scan_qimg">扫描二维码</string>
    <string name="shop_qimg">店铺二维码</string>

    <string name="phone_no">手机号码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_shop_type">请选择店铺类型</string>
    <string name="input_shop_title">请输入店铺标语</string>
    <string name="input_shop_img">请选择店铺封面</string>
    <string name="shop_img">店铺封面</string>
    <string name="input_pass">请输入密码</string>
    <string name="input_pass_confirm">请确认密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_name">请输入负责人姓名</string>
    <string name="input_card_name">请输入持卡人姓名</string>
    <string name="input_no">请输入身份证号</string>
    <string name="input_card_no">请输入持卡人身份证号</string>
    <string name="input_bank_name">请输入银行名称</string>
    <string name="select_bank">请设置银行</string>
    <string name="input_bank_zhihang">请输入开户行支行名称</string>
    <string name="input_bank_num">请输入银行卡号</string>
    <string name="input_shop_name">请输入商户名称</string>
    <string name="input_shop_title2">请输入店铺活动标题</string>
    <string name="input_shop_title3">请输入店铺活动简介</string>
    <string name="loc_info">地理位置信息</string>
    <string name="select_address">请在地图上选择店铺位置</string>
    <string name="select_area">请选择所在小区</string>
    <string name="input_address_details">请输入详细位置</string>
    <string name="provicence">省份</string>
    <string name="city">城市</string>
    <string name="seller_info">商户信息</string>
    <string name="seller_conversation_info">请设计商家封面</string>
    <string name="seller_shop_cover">商家封面(点击修改封面活动)</string>

    <string name="yu_e">可提现金额0元</string>

    <string name="sxf">手续费: 0 元</string>
    <string name="ssdz">实时到账: 0 元</string>

    <string name="zizhi_content">享受平台更多服务请先进行商户资质认证</string>
    <string name="zizhirenzheng">资质认证</string>
    <string name="hand_no">请上传手持本人身份证照片</string>
    <string name="hand_bank">请银行卡照片</string>
    <string name="hand_zizhi">请上传营业执照照片</string>

    <string name="hand_no_ok">手持证件的照片</string>
    <string name="hand_bank_ok">手持银行卡照片</string>
    <string name="hand_zizhi_ok">营业执照照片</string>


    <string name="order_num">订单号</string>
    <string name="status">状态</string>
    <string name="type">类型</string>
    <string name="pay_ment">付款方式</string>
    <string name="order_total_price">订单总额(元)</string>
    <string name="send_address">收货地址</string>
    <string name="fahuo_time">发货时间</string>
    <string name="finish_time">完成时间</string>
    <string name="order_createtime">下单时间</string>
    <string name="order_rang_time">下单时间</string>

    <string name="input_order_dec">请输入商品详情描述</string>

    <string name="product_name">产品名称</string>
    <string name="input_product_name">请输入产品名称</string>
    <string name="sort_name">产品简介</string>
    <string name="input_sort_name">请输入产品简介</string>
    <string name="unit">计量单位</string>
    <string name="input_unit">请输入计量单位</string>
    <string name="sale_price">售价</string>
    <string name="input_sale_price">请输入售价</string>
    <string name="market_price">市场价格</string>
    <string name="input_market_price">请输入市场价格</string>
    <string name="e_case_price">电子现金额度</string>
    <string name="input_e_case_price">请输入使用电子现金额度</string>

    <string name="loading_error">暂无数据!</string>

    <string name="submit_paixu">确定</string>
    <string name="paixu_notify">点击确定按钮改变列表排序</string>

    <string name="delete_product">删除商品</string>
    <string name="update_submit">提交修改</string>
    <string name="di">抵</string>

    <string name="delete">删除</string>

    <!--蓝牙打印 -->
    <string name="none_paired">没有已匹配的设备</string>
    <string name="scanning">搜索</string>
    <string name="select_device">选择一个设备连接</string>
    <string name="none_found">未发现设备</string>
    <string name="btnSearch">连接蓝牙打印机</string>
    <string name="btnSend">打印</string>
    <string name="btn_test">打印测试页</string>
    <string name="btnClose">关闭</string>
    <string name="txt_content">&quot;&quot;</string>
    <string name="menu_settings">设置</string>
    <string name="strLang">ch</string>
    <string name="button_scan">搜索打印机</string>
    <string name="one">1</string>

</resources>
