<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:background="@drawable/bg_normal_press_white" >
    
    
    <TextView 
        android:id="@+id/time"
        style="@style/TvCustomerHeader"
        android:text="@string/date"/>
    
    <TextView 
        android:id="@+id/new_add"
        style="@style/TvCustomerHeader"
        android:text="@string/new_add"/>
    
    <TextView 
        android:id="@+id/huoyue"
        style="@style/TvCustomerHeader"
        android:text="@string/huoyuelv"/>
    
    <TextView 
        android:id="@+id/leiji"
        style="@style/TvCustomerHeader"
        android:text="@string/totle"/>
    

</LinearLayout>
