<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:orientation="vertical" >

    <include layout="@layout/view_title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="120dp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_my_bg"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:text="@string/loading_data"
                    android:textColor="@color/white" />

            </RelativeLayout>



            <!--<TextView
                style="@style/TvMyTitle"
                android:text="@string/good_manager"
                android:layout_height="32dp"
                />-->

            <LinearLayout
                android:id="@+id/view_goods"
                style="@style/LLMyItem" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_my_huopin"
                    android:text="@string/huowu_manager" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <LinearLayout
                style="@style/LLMyItem"
                android:visibility="gone" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_order_dai_shou"
                    android:text="@string/send_manager" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <View style="@style/Line3" />

            <LinearLayout
                android:id="@+id/view_seller"
                style="@style/LLMyItem" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_my_shop"
                    android:text="@string/shanghu_info" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <View style="@style/Line3" />

            <LinearLayout
                android:id="@+id/view_zizhi"
                style="@style/LLMyItem" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_my_zizhi"
                    android:text="@string/zizhirenzheng" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <View style="@style/Line3" />

            <LinearLayout
                android:id="@+id/view_code"
                style="@style/LLMyItem" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_my_zhanghu"
                    android:text="@string/zhanghu" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>

            <View style="@style/Line3" />

            <LinearLayout 
                android:id="@+id/view_set"
                style="@style/LLMyItem" >

                <TextView
                    style="@style/TvMyItem"
                    android:drawableLeft="@mipmap/ic_my_set"
                    android:text="@string/set" />

                <TextView style="@style/TvMyItemNum" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>